--- a/docs/slides/main.tex
+++ b/docs/slides/main.tex
@@ -129,9 +129,9 @@
 \newpage
 \listoftodos
 
-\todoi{Weave homeworks, labs and notes}
-\todoi{Less emphasis on K-maps, more on Verilog}
-\todoi{Maybe quine mccluskey and espresso by C-coding example}
+%\todoi{Weave homeworks, labs and notes}
+%\todoi{Less emphasis on K-maps, more on Verilog}
+%\todoi{Maybe quine mccluskey and espresso by C-coding example}
 
 \newpage
 
