--- a/docs/slides/main.tex
+++ b/docs/slides/main.tex
@@ -136,11 +136,11 @@
 \newpage
 
 
-\chapter{Sets, functions and relations}
-\input{./0906-sets-functions-relations/notes.tex}
 \chapter{Boolean Algebra}
 \input{./0907-boolean-algebra/0907-notes.tex}
 \input{./0907-boolean-algebra/0912-notes.tex}
+% \chapter{Sets, functions and relations}
+% \input{./0906-sets-functions-relations/notes.tex}
 %\input{./0907-boolean-algebra/0912-fpga-notes.tex}
 % \chapter{Verilog and Schematics}
 % \input{labs/01-quartus-setup/body.tex}
